--- a/public/VideoDepartmentSelector.html
+++ b/public/VideoDepartmentSelector.html
@@ -132,7 +132,7 @@ function renderVideos() {
 
   const filtered = videos.filter(v => 
     (!department || v.department.trim().toLowerCase() === department.trim().toLowerCase()) &&
-    (v.title.toLowerCase().includes(query) || v.description.toLowerCase().includes(query))
+    (v.title?.toLowerCase().includes(query) || v.description?.toLowerCase().includes(query))
   );
   console.log("Filtered videos:", filtered);
 
