--- a/public/VideoDepartmentSelector.html
+++ b/public/VideoDepartmentSelector.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -104,12 +103,14 @@
       <a href="index.html" class="btn btn-secondary">الرجوع إلى فهرس الأقسام</a>
     </div>
   </div>
+
 <script>
+const API_BASE = 'https://video-dashboard-backend.onrender.com';
 let videos = [];
 
 async function fetchVideos() {
   try {
-    const res = await fetch('https://video-dashboard-backend.onrender.com/api/videos');
+    const res = await fetch(`${API_BASE}/api/videos`);
     videos = await res.json();
     populateDepartmentOptions();
   } catch (err) {
@@ -118,6 +119,7 @@ async function fetchVideos() {
 }
 
 function renderVideos() {
+  console.log("All departments in DB:", videos.map(v => v.department));
   const department = document.getElementById('departmentSelect').value;
   const query = document.getElementById('searchInput').value.trim().toLowerCase();
   const container = document.getElementById('videoContainer');
@@ -129,9 +131,11 @@ function renderVideos() {
   }
 
   const filtered = videos.filter(v => 
-    (!department || v.department === department) &&
-    (v.title.toLowerCase().includes(query) || v.description.toLowerCase().includes(query))
+    (!department || v.department?.trim().toLowerCase() === department.trim().toLowerCase()) &&
+    ((typeof v.title === 'string' && v.title.toLowerCase().includes(query)) ||
+     (typeof v.description === 'string' && v.description.toLowerCase().includes(query)))
   );
+  console.log("Filtered videos:", filtered);
 
   filtered.forEach(video => {
     const card = document.createElement('div');
@@ -231,7 +235,7 @@ function confirmPassword(wrapper, input) {
 
   const handleLogin = () => {
     const password = input.value;
-    fetch('https://video-dashboard-backend.onrender.com/api/verify-password', {
+    fetch(`${API_BASE}/api/verify-password`, {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({ password })
@@ -263,6 +267,7 @@ document.getElementById('departmentSelect').addEventListener('change', () => {
   document.getElementById('searchInput').disabled = false;
   renderVideos();
 });
+
 document.getElementById('searchInput').addEventListener('input', renderVideos);
 
 fetchVideos();
