--- a/public/VideoDepartmentSelector.html
+++ b/public/VideoDepartmentSelector.html
@@ -95,10 +95,8 @@
     <select id="departmentSelect" class="form-select mb-3">
       <option value="">-- اختر القسم --</option>
     </select>
-    <input id="searchInput" class="form-control mb-4" type="text" placeholder="ابحث بعنوان أو وصف الفيديو..." disabled>
-    <div id="videoContainer" class="video-grid">
-      <p class="text-muted">🔍 يرجى اختيار قسم لعرض الفيديوهات</p>
-    </div>
+    <input id="searchInput" class="form-control mb-4" type="text" placeholder="ابحث بعنوان أو وصف الفيديو...">
+    <div id="videoContainer" class="video-grid"></div>
     <div class="text-center mt-4">
       <a href="index.html" class="btn btn-secondary">الرجوع إلى فهرس الأقسام</a>
     </div>
@@ -113,6 +111,7 @@ async function fetchVideos() {
     const res = await fetch(`${API_BASE}/api/videos`);
     videos = await res.json();
     populateDepartmentOptions();
+    renderVideos(); // عرض كل الفيديوهات فورًا
   } catch (err) {
     console.error('فشل تحميل الفيديوهات:', err);
   }
@@ -124,17 +123,19 @@ function renderVideos() {
   const container = document.getElementById('videoContainer');
   container.innerHTML = '';
 
-  if (!department) {
-    container.innerHTML = '<p class="text-muted">🔍 يرجى اختيار قسم لعرض الفيديوهات</p>';
-    return;
-  }
-
   const filtered = videos.filter(v => {
     const dep = v.department?.trim().toLowerCase();
     const title = v.title?.toLowerCase() || '';
     const desc = v.description?.toLowerCase() || '';
-    return dep === department.trim().toLowerCase() && (title.includes(query) || desc.includes(query));
+    const matchesQuery = title.includes(query) || desc.includes(query);
+    if (!department) return matchesQuery;
+    return dep === department.trim().toLowerCase() && matchesQuery;
   });
+
+  if (filtered.length === 0) {
+    container.innerHTML = '<p class="text-muted">🚫 لا توجد فيديوهات مطابقة للبحث</p>';
+    return;
+  }
 
   filtered.forEach(video => {
     const card = document.createElement('div');
@@ -198,11 +199,7 @@ function populateDepartmentOptions() {
   });
 }
 
-document.getElementById('departmentSelect').addEventListener('change', () => {
-  document.getElementById('searchInput').disabled = false;
-  renderVideos();
-});
-
+document.getElementById('departmentSelect').addEventListener('change', renderVideos);
 document.getElementById('searchInput').addEventListener('input', renderVideos);
 
 fetchVideos();
