--- a/public/VideoDepartmentSelector.html
+++ b/public/VideoDepartmentSelector.html
@@ -95,7 +95,7 @@
     <select id="departmentSelect" class="form-select mb-3">
       <option value="">-- اختر القسم --</option>
     </select>
-    <input id="searchInput" class="form-control mb-4" type="text" placeholder="ابحث بعنوان أو وصف الفيديو...">
+    <input id="searchInput" class="form-control mb-4" type="text" placeholder="ابحث بعنوان أو وصف الفيديو..." disabled>
     <div id="videoContainer" class="video-grid"></div>
     <div class="text-center mt-4">
       <a href="index.html" class="btn btn-secondary">الرجوع إلى فهرس الأقسام</a>
@@ -111,7 +111,6 @@ async function fetchVideos() {
     const res = await fetch(`${API_BASE}/api/videos`);
     videos = await res.json();
     populateDepartmentOptions();
-    renderVideos();
   } catch (err) {
     console.error('فشل تحميل الفيديوهات:', err);
   }
@@ -123,13 +122,14 @@ function renderVideos() {
   const container = document.getElementById('videoContainer');
   container.innerHTML = '';
 
+  if (!department) return;
+
   const filtered = videos.filter(v => {
     const dep = v.department?.trim().toLowerCase();
     const title = v.title?.toLowerCase() || '';
     const desc = v.description?.toLowerCase() || '';
     const link = v.link || '';
     const matchesQuery = title.includes(query) || desc.includes(query);
-    if (!department) return matchesQuery;
     return dep === department.trim().toLowerCase() && matchesQuery;
   });
 
@@ -217,7 +217,10 @@ async function requestDashboardAccess() {
   }
 }
 
-document.getElementById('departmentSelect').addEventListener('change', renderVideos);
+document.getElementById('departmentSelect').addEventListener('change', () => {
+  document.getElementById('searchInput').disabled = false;
+  renderVideos();
+});
 document.getElementById('searchInput').addEventListener('input', renderVideos);
 
 fetchVideos();
