--- a/public/department.html
+++ b/public/department.html
@@ -64,7 +64,7 @@ function getEmbedCode(link) {
       ? `<iframe src="https://drive.google.com/file/d/${fileId}/preview" allowfullscreen onerror="
             alert('تعذر تشغيل فيديو Google Drive. سيتم فتحه في نافذة جديدة.');
             window.open('${link}', '_blank', 'width=800,height=600');
-            this.outerHTML = '<p class="text-danger">تعذر تشغيل الفيديو. <a href='${link}' target='_blank'>اضغط هنا لفتحه في نافذة جديدة</a></p>';
+            this.outerHTML = '<p class=\"text-danger\">تعذر تشغيل الفيديو. <a href='${link}' target='_blank'>اضغط هنا لفتحه في نافذة جديدة</a></p>';
           "></iframe>`
       : '<div class="alert alert-danger">رابط Google Drive غير صالح أو خاص. تأكد من أنه مشترك علنًا.</div>';
   } else {
@@ -83,7 +83,7 @@ function openInPopup(link) {
 
 let allVideos = [];
 const urlParams = new URLSearchParams(window.location.search);
-const dept = urlParams.get('dept');
+const dept = decodeURIComponent(urlParams.get('dept') || '');
 const container = document.getElementById('videoContainer');
 const pageTitle = document.getElementById('page-title');
 
@@ -97,6 +97,7 @@ async function fetchVideos() {
     }));
     renderFilteredVideos();
   } catch (err) {
+    console.error('Fetch error:', err);
     container.innerHTML = `<div class="alert alert-danger text-center">فشل تحميل الفيديوهات من الخادم</div>`;
   }
 }
@@ -123,7 +124,7 @@ function renderFilteredVideos() {
 }
 
 if (dept) {
-  pageTitle.textContent = `فيديوهات ${dept}`;
+  pageTitle.textContent = `فيديوهات قسم ${dept}`;
   fetchVideos();
 } else {
   container.innerHTML = `<div class="alert alert-warning text-center">لم يتم تحديد القسم في عنوان الرابط.</div>`;
